--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -96,6 +96,18 @@ a {
   & * {
     color: black;
   }
+  .topBox {
+    height: 100vh;
+    .name {
+      float: left;
+      padding-right: 2rem;
+
+      img {
+        height: 120px;
+        max-width: 100%;
+      }
+    }
+  }
 }
 
 u {
@@ -111,25 +123,17 @@ ul {
 }
 
 .descripsh {
-  font-family: "Apple Garamond";
-  font-size: 4.3rem;
-  line-height: 95%;
+  font-family: "Saans Light";
+  font-size: 4vw;
+  // line-height: 105%;
   text-align: justify;
-  letter-spacing: -2px;
+  // letter-spacing: -2px;
   color: black;
-
+  &:first-child {
+    padding-bottom: 20px;
+  }
   &--2 {
     margin-top: 1rem;
-  }
-
-  .name {
-    float: left;
-    padding-right: 2rem;
-
-    img {
-      height: 120px;
-      max-width: 100%;
-    }
   }
 }
 @media (max-width: 850px) {
@@ -198,8 +202,9 @@ a {
     line-height: 70%;
   }
 
-  &.roobert {
-    height: 50px;
+  & div.roobert {
+    // height: 50px;
+    // width: 30px;
   }
 
   &.skelter {
@@ -242,7 +247,7 @@ a {
   min-height: 100vh;
   padding: 4vw;
   padding-bottom: 5rem;
-
+  padding-top: 2vw;
   .recentwork {
     padding-bottom: 70px;
     color: black;
@@ -254,10 +259,13 @@ a {
   width: 100%;
   height: 69.5vw;
   max-width: 100%;
+  margin-bottom: 5vw;
   .imagesContainer {
     width: 100%;
     height: 100%;
-
+    ul li {
+      border-radius: 10px;
+    }
     ul {
       width: 100%;
 
@@ -269,6 +277,7 @@ a {
 
         img {
           width: 100%;
+          border-radius: 10px;
         }
       }
     }
@@ -293,6 +302,28 @@ a {
   .imagesContainer {
     ul {
       @include slideShow(2, "cal");
+
+      li {
+        &.liImage--0:after {
+          content: "1/3";
+        }
+
+        &.liImage--1:after {
+          content: "2/3";
+        }
+
+        &.liImage--2:after {
+          content: "3/3";
+        }
+      }
+    }
+  }
+}
+
+.norm {
+  .imagesContainer {
+    ul {
+      @include slideShow(2, "norman");
 
       li {
         &.liImage--0:after {
@@ -353,6 +384,42 @@ a {
 
         &.liImage--2:after {
           content: "3/3";
+        }
+      }
+    }
+  }
+}
+.handful {
+  .imagesContainer {
+    ul {
+      @include slideShow(5, "hand");
+
+      li {
+        img {
+          border-radius: 10px;
+        }
+      }
+
+      li {
+        &.liImage--0:after {
+          content: "1/6";
+        }
+
+        &.liImage--1:after {
+          content: "2/6";
+        }
+
+        &.liImage--2:after {
+          content: "3/6";
+        }
+        &.liImage--3:after {
+          content: "4/6";
+        }
+        &.liImage--4:after {
+          content: "5/6";
+        }
+        &.liImage--5:after {
+          content: "6/6";
         }
       }
     }
