--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,11 +30,26 @@ a {
 }
 .bigdiv .topBox .name {
   float: left;
-  padding-right: 2rem;
 }
 .bigdiv .topBox .name img {
   height: 120px;
   max-width: 100%;
+}
+.bigdiv .topBox .barkFloat {
+  position: absolute;
+  font-family: "Saans Med";
+  font-size: 6rem;
+  line-height: 6vw;
+}
+.bigdiv .topBox .barkFloat--2 {
+  top: 29vw;
+  right: 4vw;
+}
+.bigdiv .topBox .arrow {
+  position: absolute;
+  bottom: 0px;
+  left: 3.7vw;
+  width: 120px;
 }
 
 u {
