--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,26 +30,20 @@ a {
 }
 .bigdiv .topBox .name {
   float: left;
-}
-.bigdiv .topBox .name img {
-  height: 120px;
-  max-width: 100%;
+  height: 40px;
 }
 .bigdiv .topBox .barkFloat {
   position: absolute;
-  font-family: "Saans Med";
-  font-size: 6rem;
-  line-height: 6vw;
 }
-.bigdiv .topBox .barkFloat--2 {
-  top: 29vw;
-  right: 4vw;
+.bigdiv .topBox .barkFloat--1 {
+  top: 3.8vw;
+  right: 3vw;
 }
 .bigdiv .topBox .arrow {
   position: absolute;
   bottom: 0px;
   left: 3.7vw;
-  width: 120px;
+  width: 70px;
 }
 
 u {
@@ -75,6 +69,7 @@ ul {
 }
 .descripsh--2 {
   margin-top: 1rem;
+  padding: 4vw;
 }
 
 @media (max-width: 850px) {
