--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -100,30 +100,20 @@ a {
     height: 100vh;
     .name {
       float: left;
-      img {
-        height: 120px;
-        max-width: 100%;
-      }
+      height: 40px;
     }
     .barkFloat {
       position: absolute;
-      font-family: "Saans Med";
-      font-size: 6rem;
-      line-height: 6vw;
-      // &--1 {
-      //   top: 37%;
-      //   right: 11vw;
-      // }
-      &--2 {
-        top: 29vw;
-        right: 4vw;
+      &--1 {
+        top: 3.8vw;
+        right: 3vw;
       }
     }
     .arrow {
       position: absolute;
       bottom: 0px;
       left: 3.7vw;
-      width: 120px;
+      width: 70px;
     }
   }
 }
@@ -152,6 +142,7 @@ ul {
   }
   &--2 {
     margin-top: 1rem;
+    padding: 4vw;
   }
 }
 @media (max-width: 850px) {
