adding to index.js

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,14 @@ a {
   box-sizing: border-box;
 }
 
+hr {
+  border: none;
+  border-top: 3px solid black;
+}
+hr:first-of-type {
+  margin-top: 30px;
+}
+
 .bigdiv {
   background-color: rgb(233, 231, 216);
   padding: 4vw;
@@ -29,15 +37,14 @@ a {
   height: 90vh;
 }
 .bigdiv .topBox .name {
-  float: left;
   height: 40px;
 }
 .bigdiv .topBox .barkFloat {
-  position: absolute;
-}
-.bigdiv .topBox .barkFloat--1 {
-  top: 3.8vw;
-  right: 3vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding-top: 30px;
+  margin-left: -10px;
 }
 .bigdiv .topBox .arrow {
   position: absolute;
@@ -68,8 +75,7 @@ ul {
   padding-bottom: 20px;
 }
 .descripsh--2 {
-  margin-top: 1rem;
-  padding: 4vw;
+  padding: 0 4vw 4vw;
 }
 
 @media (max-width: 850px) {
@@ -145,11 +151,19 @@ a {
   opacity: 1;
 }
 
+a {
+  text-decoration-color: #88a691;
+  transition: all 0.3s ease;
+}
+a:hover {
+  text-decoration-color: black;
+}
+
 .bottomdiv {
   background: rgb(233, 231, 216);
   min-height: 100vh;
   padding: 4vw;
-  padding-bottom: 5rem;
+  padding-bottom: 2vw;
   padding-top: 2vw;
 }
 .bottomdiv .recentwork {
