--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,14 +17,6 @@ a {
   box-sizing: border-box;
 }
 
-hr {
-  border: none;
-  border-top: 3px solid black;
-}
-hr:first-of-type {
-  margin-top: 30px;
-}
-
 .bigdiv {
   background-color: rgb(233, 231, 216);
   padding: 4vw;
@@ -34,10 +26,17 @@ hr:first-of-type {
   color: black;
 }
 .bigdiv .topBox {
-  height: 90vh;
+  height: 96vh;
 }
 .bigdiv .topBox .name {
   height: 40px;
+}
+.bigdiv .topBox hr {
+  border: none;
+  border-top: 3px solid black;
+}
+.bigdiv .topBox hr:first-of-type {
+  margin-top: 30px;
 }
 .bigdiv .topBox .barkFloat {
   display: flex;
@@ -45,6 +44,7 @@ hr:first-of-type {
   justify-content: end;
   padding-top: 30px;
   margin-left: -10px;
+  max-width: 92vw;
 }
 .bigdiv .topBox .arrow {
   position: absolute;
