--- a/styles/globals.css
+++ b/styles/globals.css
@@ -260,6 +260,14 @@ a:hover {
   font-family: "Apple Garamond";
 }
 
+@media (max-width: 750px) {
+  .pane {
+    margin-top: 8vw !important;
+  }
+  .pane:last-of-type {
+    margin-bottom: 5vw;
+  }
+}
 .liImage:after {
   font-family: "Melody Regular";
   letter-spacing: 3px;
