yo yo yo! adding more components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -479,31 +479,25 @@ a:hover {
 }
 
 .handful .imagesContainer ul .liImage--0 {
-  animation: xfade--hand 25.95s 0s infinite;
+  animation: xfade--hand 15.57s 0s infinite;
 }
 .handful .imagesContainer ul .liImage--1 {
-  animation: sixNine--hand 0.69s 4.5s forwards, xfade--hand 25.95s 5.19s infinite;
+  animation: sixNine--hand 0.69s 4.5s forwards, xfade--hand 15.57s 5.19s infinite;
 }
 .handful .imagesContainer ul .liImage--2 {
-  animation: sixNine--hand 0.69s 9.69s forwards, xfade--hand 25.95s 10.38s infinite;
-}
-.handful .imagesContainer ul .liImage--3 {
-  animation: sixNine--hand 0.69s 14.88s forwards, xfade--hand 25.95s 15.57s infinite;
-}
-.handful .imagesContainer ul .liImage--4 {
-  animation: sixNine--hand 0.69s 20.07s forwards, xfade--hand 25.95s 20.76s infinite;
+  animation: sixNine--hand 0.69s 9.69s forwards, xfade--hand 15.57s 10.38s infinite;
 }
 @keyframes xfade--hand {
   0% {
     opacity: 1;
   }
-  17.3410404624% {
+  28.901734104% {
     opacity: 1;
   }
-  20% {
+  33.3333333333% {
     opacity: 0;
   }
-  97.3410404624% {
+  95.5684007707% {
     opacity: 0;
   }
   100% {
@@ -522,22 +516,54 @@ a:hover {
   border-radius: 10px;
 }
 .handful .imagesContainer ul li.liImage--0:after {
-  content: "1/5";
+  content: "1/3";
 }
 .handful .imagesContainer ul li.liImage--1:after {
-  content: "2/5";
+  content: "2/3";
 }
 .handful .imagesContainer ul li.liImage--2:after {
-  content: "3/5";
+  content: "3/3";
 }
-.handful .imagesContainer ul li.liImage--3:after {
-  content: "4/5";
+
+.imagesContainer ul .liImage--0 {
+  animation: xfade--story 10.38s 0s infinite;
 }
-.handful .imagesContainer ul li.liImage--4:after {
-  content: "5/5";
+.imagesContainer ul .liImage--1 {
+  animation: sixNine--story 0.69s 4.5s forwards, xfade--story 10.38s 5.19s infinite;
 }
-.handful .imagesContainer ul li.liImage--5:after {
-  content: "6/6";
+@keyframes xfade--story {
+  0% {
+    opacity: 1;
+  }
+  43.3526011561% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  93.3526011561% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes sixNine--story {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.imagesContainer ul li img {
+  border-radius: 10px;
+}
+.imagesContainer ul li.liImage--0:after {
+  content: "1/2";
+}
+.imagesContainer ul li.liImage--1:after {
+  content: "2/2";
 }
 
 @font-face {
