added Sequoia, dumpTRUCK components to give them proper regard

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -424,6 +424,7 @@ a {
 
         &.liImage--2:after {
           content: "3/3";
+          color: white;
         }
       }
     }
@@ -541,6 +542,7 @@ a {
 
         &.liImage--1:after {
           content: "2/2";
+          color: white;
         }
       }
     }
