--- a/styles/globals.css
+++ b/styles/globals.css
@@ -344,6 +344,7 @@ a:hover {
 }
 .calvin .imagesContainer ul li.liImage--2:after {
   content: "3/3";
+  color: white;
 }
 
 .norm .imagesContainer ul .liImage--0 {
@@ -558,6 +559,7 @@ a:hover {
 }
 .seqseq .imagesContainer ul li.liImage--1:after {
   content: "2/2";
+  color: white;
 }
 
 @font-face {
